GumYungAnalyzer/Grammar.txt
File = Row {("\r\n" | "," | "，") [Row]};
Row = Party [Operator] RangeWithPrefer | Party Challenger {["再"] Challenger } ["?" | "？"];
Challenger = Operator Party [RangeWithPrefer];
Party = Fighter {"+" Fighter} | Fighter {Fighter};
RangeWithPrefer = ["~"] Range [["~"] Range];
Range = Number ["-" Number] | PositiveNumber ("++" | "+" | "-" | "+-");
Operator = ">" | "<" | "=" | "~";
Number = ["-"] PositiveNumber;
PositiveNumber = Digit{Digit};
Digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
